--- a/about.html
+++ b/about.html
@@ -2,7 +2,8 @@
     <head>
         <title>About Us</title>
     </head>
-    <body style="background-color: tomato;">
+    <body style="background-color: yellowgreen;">
         <h1>this is the our background history</h1>
+        <h1>Login feature</h1>
     </body>
 </html>
